# karel-compiler

./: .gitignore  CMakeLists.txt  Dockerfile  KAREL_VALIDATION.md  NINJA.md  PREPROCESSOR.md  README.md  Taskfile.yaml  build.ninja  build.ninja.template  build.sh  configure.py  demo-ninja.sh  docker-compose.yml  karel-compiler.cabal  karel.cf  karelc  stack.yaml
.github/workflows/: build-and-test.yml
examples/: config.kl  foo.kl  hello.kl  hello_fixed.kl  minimal.kl  platform.kl  semi.kl  tabs.kl
runtime/: Makefile  runtime.c  runtime.h
src/: AbsKarel.hs  BuiltIns.hs  CodeGen.cpp  CodeGen.h  CodeGen.hs  DocKarel.txt  KarelEnums.h  LLVM.hs  LexKarel.hs  LexKarel.x  Main.hs  Makefile  ModuleResolver.hs  ParKarel.hs  ParKarel.y  Precompiler.hs  PrintKarel.hs  SkelKarel.hs  TestKarel.hs  main.cpp
test/: bar.kl  foo.kl  hello.kl  math.kl  preprocessor.kl  simple.kl  test_basic.kl
