name:                karel-compiler
version:             0.1.0.0
synopsis:            FANUC Karel to LLVM compiler with precompiler
description:         A complete Karel compiler with module resolution and precompiler support
homepage:            https://github.com/afeldman/acc
license:             MIT
author:              Anton Feldmann
maintainer:          anton.feldmann@gmail.com
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

executable karelc
  main-is:             Main.hs
  other-modules:       AbsKarel
                     , LexKarel
                     , ParKarel
                     , PrintKarel
                     , SkelKarel
                     , ErrM
                     , Precompiler
                     , ModuleResolver
                     , BuiltIns
                     , CodeGen
                     , LLVM
  build-depends:       base >=4.7 && <5
                     , llvm-hs >= 9.0 && < 10
                     , llvm-hs-pure >= 9.0 && < 10
                     , llvm-hs-pretty >= 0.9
                     , mtl >= 2.2
                     , bytestring >= 0.10
                     , containers >= 0.6
                     , filepath >= 1.4
                     , directory >= 1.3
                     , text >= 1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
